@@ -1,0 +1,5 @@
+<h2>Configuration de l'accès au serveur MySQL</h2>
+<?php
+echo $form->renderGlobalErrors();
+include_partial('form', array('form' => $form));
+?>
